# my_j1

./: README.md
j1/: __init__.py  combined.py  integrate.py  large.py  polynomial.py  remez.py  rk4.py  taylor.py
j1_cpython/source/: CMakeLists.txt  avx2_math_stuff.h  j1_large.c  j1_poly.c  j1_taylor.c  library.c  my_j1.h
tests/: cpython_performance_test.py  plots.py  remez_approx.py
